Fix layout shift with modals

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
-@plugin "daisyui";
+
+@plugin "daisyui" {
+    exclude: rootscrollgutter;
+}
 
 @layer utilities {
   .scroll-indicator {
